--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+<!-- Toast Notification -->
+<div id="toast">Product added to cart!</div>
+
 <!-- Landing Page -->
 <div id="landingPage">
   <h1>Welcome to David Resell Store</h1>
@@ -88,30 +91,31 @@ const cologneOptions = ['Dior Sauvage', 'Bleu de Chanel', 'Creed Aventus', 'Tom 
 const watchOptions = ['Rolex Submariner', 'Apple Watch S8', 'Casio G-Shock', 'Omega Seamaster'];
 const cart = [];
 
+function showToast(message) {
+  const toast = document.getElementById('toast');
+  toast.textContent = message;
+  toast.style.display = 'block';
+  setTimeout(() => {
+    toast.style.display = 'none';
+  }, 3000);
+}
+
 function renderProducts(filterText = '', category = '') {
   const container = document.getElementById('productContainer');
   container.innerHTML = '';
-
   const filtered = products.filter(p =>
     p.name.toLowerCase().includes(filterText.toLowerCase()) &&
     (category === '' || p.category === category)
   );
-
   filtered.forEach(product => {
     const card = document.createElement('div');
     card.className = 'card';
     let variantHTML = '';
-
     if (product.category === 'cologne') {
-      variantHTML = `<select class="variant-select" id="variant-${product.id}">
-        ${cologneOptions.map(opt => `<option value="${opt}">${opt}</option>`).join('')}
-      </select>`;
+      variantHTML = `<select class="variant-select" id="variant-${product.id}">${cologneOptions.map(opt => `<option value="${opt}">${opt}</option>`).join('')}</select>`;
     } else if (product.category === 'wristwatch') {
-      variantHTML = `<select class="variant-select" id="variant-${product.id}">
-        ${watchOptions.map(opt => `<option value="${opt}">${opt}</option>`).join('')}
-      </select>`;
+      variantHTML = `<select class="variant-select" id="variant-${product.id}">${watchOptions.map(opt => `<option value="${opt}">${opt}</option>`).join('')}</select>`;
     }
-
     card.innerHTML = `
       <div class="product-image img-${product.id}"></div>
       <h5>${product.name}</h5>
@@ -130,15 +134,14 @@ function addToCart(productId) {
   let variant = '';
   const variantSelect = document.getElementById(`variant-${productId}`);
   if (variantSelect) variant = variantSelect.value;
-
   const existing = cart.find(item => item.id === productId && item.variant === variant);
-
   if (existing) {
     existing.qty += qty;
   } else {
     cart.push({ ...product, qty, variant });
   }
   updateCartPreview();
+  showToast(`${product.name}${variant ? ' - ' + variant : ''} added to cart`);
 }
 
 function updateCartPreview() {
@@ -146,18 +149,15 @@ function updateCartPreview() {
   const totalAmount = document.getElementById('totalAmount');
   cartItems.innerHTML = '';
   let total = 0;
-
   if (cart.length === 0) {
     cartItems.innerHTML = '<li>Your cart is empty.</li>';
     totalAmount.textContent = '';
     return;
   }
-
   cart.forEach((item, index) => {
     const li = document.createElement('li');
     const itemTotal = item.qty * item.price;
     total += itemTotal;
-
     li.innerHTML = `
       <span>${item.name}${item.variant ? ' - ' + item.variant : ''}</span>
       <div>
@@ -168,7 +168,6 @@ function updateCartPreview() {
     `;
     cartItems.appendChild(li);
   });
-
   totalAmount.textContent = `Total: $${total}`;
 }
 
@@ -190,41 +189,33 @@ document.getElementById('enterStoreBtn').addEventListener('click', () => {
 window.addEventListener('DOMContentLoaded', () => {
   renderProducts();
   updateCartPreview();
-
   document.getElementById('clearCartBtn').onclick = () => {
     cart.length = 0;
     updateCartPreview();
   };
-
   document.getElementById('checkoutBtn').onclick = () => {
     if (cart.length === 0) return alert('Cart is empty!');
     document.getElementById('checkoutForm').style.display = 'block';
   };
-
   document.getElementById('checkoutForm').addEventListener('submit', function (e) {
     e.preventDefault();
     const name = document.getElementById('name').value;
     const address = document.getElementById('address').value;
     const phone = document.getElementById('phone').value;
     const note = document.getElementById('note').value;
-
-    const summary = cart.map(item => `${item.name} ${item.variant || ''} x${item.qty}`).join('%0A');
+    const summary = cart.map(item => `\u2022 ${item.name} ${item.variant || ''} x${item.qty}`).join('%0A');
     const total = cart.reduce((sum, item) => sum + (item.qty * item.price), 0);
-
-    const message = `Order Summary:${summary}Total: $${total} Name: ${name}Address: ${address}Phone: ${phone}Note: ${note}`;
-   document.getElementById('telegramLink').href = `https://t.me/amelia_james_pod?start=${encodeURIComponent(message)}`;
-
-   document.getElementById('whatsappLink').href = `https://wa.me/2349060195764?text=${encodeURIComponent(message)}`;
+    const message = `Order Summary:%0A${summary}%0A%0ATotal: $${total}%0A%0AName: ${name}%0AAddress: ${address}%0APhone: ${phone}%0ANote: ${note}`;
+    document.getElementById('telegramLink').href = `https://t.me/amelia_james_pod?start=${encodeURIComponent(message)}`;
+    document.getElementById('whatsappLink').href = `https://wa.me/2349060195764?text=${encodeURIComponent(message)}`;
     document.getElementById('contactLinks').style.display = 'block';
     alert('Order ready to send.');
   });
-
   document.getElementById('searchInput').addEventListener('input', (e) => {
     const filterText = e.target.value;
     const category = document.getElementById('categoryFilter').value;
     renderProducts(filterText, category);
   });
-
   document.getElementById('categoryFilter').addEventListener('change', (e) => {
     const category = e.target.value;
     const filterText = document.getElementById('searchInput').value;
