--- a/index.html
+++ b/index.html
@@ -197,17 +197,22 @@ window.addEventListener('DOMContentLoaded', () => {
     if (cart.length === 0) return alert('Cart is empty!');
     document.getElementById('checkoutForm').style.display = 'block';
   };
-  document.getElementById('checkoutForm').addEventListener('submit', function (e) {
+ document.getElementById('checkoutForm').addEventListener('submit', function (e) {
     e.preventDefault();
     const name = document.getElementById('name').value;
     const address = document.getElementById('address').value;
     const phone = document.getElementById('phone').value;
     const note = document.getElementById('note').value;
-    const summary = cart.map(item => `\u2022 ${item.name} ${item.variant || ''} x${item.qty}`).join('%0A');
+
+    const summaryLines = cart.map(item => `- ${item.name}${item.variant ? ' (' + item.variant + ')' : ''} x${item.qty} = $${item.qty * item.price}`);
+    const summary = summaryLines.join('%0A');
     const total = cart.reduce((sum, item) => sum + (item.qty * item.price), 0);
-    const message = `Order Summary:%0A${summary}%0A%0ATotal: $${total}%0A%0AName: ${name}%0AAddress: ${address}%0APhone: ${phone}%0ANote: ${note}`;
+
+    const message = `🛒 *Order Summary*%0A${summary}%0A%0A*Total:* $${total}%0A%0A*Customer Details*%0AName: ${name}%0AAddress: ${address}%0APhone: ${phone}%0ANote: ${note}`;
+
     document.getElementById('telegramLink').href = `https://t.me/amelia_james_pod?start=${encodeURIComponent(message)}`;
     document.getElementById('whatsappLink').href = `https://wa.me/2349060195764?text=${encodeURIComponent(message)}`;
+
     document.getElementById('contactLinks').style.display = 'block';
     alert('Order ready to send.');
   });
