--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ window.addEventListener('DOMContentLoaded', () => {
     document.getElementById('whatsappLink').href = `https://wa.me/2349060195764?text=${encodeURIComponent(message)}`;
 
     document.getElementById('contactLinks').style.display = 'block';
-    alert('Order ready to send.');
+    alert('Choose a platform below to send your order');
   });
   document.getElementById('searchInput').addEventListener('input', (e) => {
     const filterText = e.target.value;
