--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="css/style.css"/>
+  <title>David Resell Store</title>
+</head>
+<body>
+
 <!-- Toast Notification -->
 <div id="toast">Product added to cart!</div>
 
@@ -38,6 +48,11 @@
       <option value="cologne">Cologne</option>
       <option value="wristwatch">Wristwatch</option>
       <option value="accessory">Accessories</option>
+      <option value="dyson">Dyson</option>
+      <option value="hoodie">Hoodies</option>
+      <option value="moissanite">Moissanite</option>
+      <option value="sneakers">Sneakers</option>
+      <option value="console">Gaming</option>
     </select>
   </div>
 
@@ -68,27 +83,31 @@
   </div>
 </div>
 
+
 <script>
+
 const products = [
   { id: 1, name: 'AirPods Pro 2', price: 200, category: 'airpods' },
   { id: 2, name: 'AirPods 4', price: 180, category: 'airpods' },
   { id: 3, name: 'AirPods Pro Max', price: 250, category: 'airpods' },
-  { id: 4, name: 'Cologne', price: 150, category: 'cologne' },
-  { id: 5, name: 'Wristwatch', price: 300, category: 'wristwatch' },
-  { id: 6, name: 'Power Bank', price: 60, category: 'accessory' },
-  { id: 7, name: 'Bluetooth Speaker', price: 75, category: 'accessory' },
-  { id: 8, name: 'Wireless Charger Pad', price: 45, category: 'accessory' },
-  { id: 9, name: 'iPhone Case', price: 20, category: 'accessory' },
-  { id: 10, name: 'Gaming Headset', price: 80, category: 'accessory' },
-  { id: 11, name: 'Smart Light Bulb', price: 25, category: 'accessory' },
-  { id: 12, name: 'Smart Band', price: 55, category: 'accessory' },
-  { id: 13, name: 'Mini Projector', price: 110, category: 'accessory' },
-  { id: 14, name: 'Wireless Mouse', price: 35, category: 'accessory' },
-  { id: 15, name: 'Webcam 1080p', price: 50, category: 'accessory' },
+  { id: 4, name: 'Cologne', price: 150, category: 'cologne', variants: ['Dior Sauvage', 'Bleu de Chanel', 'Creed Aventus', 'Tom Ford Noir'] },
+  { id: 5, name: 'Wristwatch', price: 300, category: 'wristwatch', variants: ['Rolex Submariner', 'Apple Watch S8', 'Casio G-Shock', 'Omega Seamaster'] },
+  { id: 12, name: 'DJI Camera 3 (Creator Combo)', price: 420, category: 'accessory' },
+  { id: 13, name: 'Dyson Airwrap', price: 550, category: 'dyson' },
+  { id: 14, name: 'Hoodie', price: 100, category: 'hoodie', variants: ['Spider Hoodie', 'Hell Star Hoodie', 'Essentials Hoodie', 'Trapstar Hoodie', 'Palm Angels Hoodie', 'VLONE Hoodie', 'Off-White Hoodie'] },
+  { id: 15, name: 'Moissanite', price: 220, category: 'moissanite', variants: ['Moissanite Studs', 'Moissanite Necklace', 'Moissanite Ring', 'Moissanite Bracelet', 'Moissanite Watch', 'Moissanite Earrings'] },
+  { id: 16, name: 'Sneakers', price: 300, category: 'sneakers', variants: ['Nike Air Force 1', 'Adidas Yeezy', 'Jordan 1', 'New Balance 550', 'Nike Dunk', 'Balenciaga Triple S'] },
+  { id: 17, name: 'PS5', price: 600, category: 'console' },
+  { id: 18, name: 'PlayStation', price: 500, category: 'console' },
+  { id: 19, name: 'Xbox', price: 450, category: 'console' },
+  { id: 6, name: 'Wireless Charger (3 in 1)', price: 45, category: 'accessory' },
+  { id: 7, name: 'Gaming Headset', price: 80, category: 'accessory' },
+  { id: 8, name: 'Smart Light Bulb', price: 25, category: 'accessory' },
+  { id: 9, name: 'Smart Band', price: 55, category: 'accessory' },
+  { id: 10, name: 'Mini Projector', price: 110, category: 'accessory' },
+  { id: 11, name: 'Wireless Mouse', price: 35, category: 'accessory' },
 ];
 
-const cologneOptions = ['Dior Sauvage', 'Bleu de Chanel', 'Creed Aventus', 'Tom Ford Noir'];
-const watchOptions = ['Rolex Submariner', 'Apple Watch S8', 'Casio G-Shock', 'Omega Seamaster'];
 const cart = [];
 
 function showToast(message) {
@@ -110,12 +129,12 @@ function renderProducts(filterText = '', category = '') {
   filtered.forEach(product => {
     const card = document.createElement('div');
     card.className = 'card';
+
     let variantHTML = '';
-    if (product.category === 'cologne') {
-      variantHTML = `<select class="variant-select" id="variant-${product.id}">${cologneOptions.map(opt => `<option value="${opt}">${opt}</option>`).join('')}</select>`;
-    } else if (product.category === 'wristwatch') {
-      variantHTML = `<select class="variant-select" id="variant-${product.id}">${watchOptions.map(opt => `<option value="${opt}">${opt}</option>`).join('')}</select>`;
+    if (product.variants) {
+      variantHTML = `<select class="variant-select" id="variant-${product.id}">${product.variants.map(opt => `<option value="${opt}">${opt}</option>`).join('')}</select>`;
     }
+
     card.innerHTML = `
       <div class="product-image img-${product.id}"></div>
       <h5>${product.name}</h5>
@@ -189,37 +208,43 @@ document.getElementById('enterStoreBtn').addEventListener('click', () => {
 window.addEventListener('DOMContentLoaded', () => {
   renderProducts();
   updateCartPreview();
+
   document.getElementById('clearCartBtn').onclick = () => {
     cart.length = 0;
     updateCartPreview();
   };
+
   document.getElementById('checkoutBtn').onclick = () => {
     if (cart.length === 0) return alert('Cart is empty!');
     document.getElementById('checkoutForm').style.display = 'block';
   };
- document.getElementById('checkoutForm').addEventListener('submit', function (e) {
+
+  document.getElementById('checkoutForm').addEventListener('submit', function (e) {
     e.preventDefault();
     const name = document.getElementById('name').value;
     const address = document.getElementById('address').value;
     const phone = document.getElementById('phone').value;
     const note = document.getElementById('note').value;
+
     const summaryLines = cart.map(item => `- ${item.name}${item.variant ? ' (' + item.variant + ')' : ''} x${item.qty} = $${item.qty * item.price}`);
-    const summary = summaryLines.join('');
+    const summary = summaryLines.join('\n');
     const total = cart.reduce((sum, item) => sum + (item.qty * item.price), 0);
 
-    const message = `🛒 *Order Summary* ${summary} *Total:* $${total} *Customer Details* Name: ${name} Address: ${address}Phone: ${phone} Note: ${note}`;
+    const message = `🛒 *Order Summary*\n${summary}\n*Total:* $${total}\n*Customer Details*\nName: ${name}\nAddress: ${address}\nPhone: ${phone}\nNote: ${note}`;
 
     document.getElementById('telegramLink').href = `https://t.me/amelia_james_pod?start=${encodeURIComponent(message)}`;
     document.getElementById('whatsappLink').href = `https://wa.me/2349060195764?text=${encodeURIComponent(message)}`;
 
     document.getElementById('contactLinks').style.display = 'block';
-    alert('Choose a platform below to send your order');
+    alert('Choose where you want to send your order.');
   });
+
   document.getElementById('searchInput').addEventListener('input', (e) => {
     const filterText = e.target.value;
     const category = document.getElementById('categoryFilter').value;
     renderProducts(filterText, category);
   });
+
   document.getElementById('categoryFilter').addEventListener('change', (e) => {
     const category = e.target.value;
     const filterText = document.getElementById('searchInput').value;
@@ -227,5 +252,6 @@ window.addEventListener('DOMContentLoaded', () => {
   });
 });
 </script>
+
 </body>
 </html>
