--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@ window.addEventListener('DOMContentLoaded', () => {
     const total = cart.reduce((sum, item) => sum + (item.qty * item.price), 0);
 
     const message = `🛒 *Order Summary*\n${summary}\n*Total:* $${total}\n*Customer Details*\nName: ${name}\nAddress: ${address}\nPhone: ${phone}\nNote: ${note}`;
-
-    document.getElementById('telegramLink').href = `https://t.me/share/url?url=https://t.me/david_air1&text=${encodeURIComponent(message)}`;
+    document.getElementById('telegramLink').href = `https://t.me/david_air1?text=${encodeURIComponent(message)}`;
     document.getElementById('whatsappLink').href = `https://wa.me/2349060195764?text=${encodeURIComponent(message)}`;
 
     document.getElementById('contactLinks').style.display = 'block';
