Update css/style/ image/ audio  index.HTML

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ const products = [
   { id: 1, name: 'AirPods Pro 2', price: 20, category: 'airpods' },
   { id: 2, name: 'AirPods 4', price: 25, category: 'airpods' },
   { id: 3, name: 'AirPods Pro Max', price: 75, category: 'airpods' },
-  { id: 13, name: 'Dyson', price: 150, category: 'cologne', variants: ['air dryer', 'vaccum cleaner' ,'airwrap'] },
+  { id: 13, name: 'Dyson', price: 150, category: 'accessory', variants: ['air dryer', 'vaccum cleaner' ,'airwrap'] },
   { id: 4, name: 'Cologne', price: 30, category: 'cologne', variants: ['Dior Sauvage', 'Bleu de Chanel', 'Creed Aventus', 'Tom Ford Noir'] },
   { id: 5, name: 'Wristwatch', price: 30, category: 'wristwatch', variants: ['Rolex Submariner', 'Apple Watch S8', 'Casio G-Shock', 'Omega Seamaster'] },
   { id: 12, name: 'DJI Camera 3 (Creator Combo)', price: 320, category: 'accessory' },
